# vox-radio

./: .dockerignore  .env  .env.example  .gitignore  DESIGN.md  DESIGN_DOC.md  LICENSE  PROJECT.md  README.md  REPO_TREE.txt  pyproject.toml  requirements.txt
src/: __init__.py  app.py  config.py  main.py
src/output/: __init__.py
src/radio/: __init__.py  receiver.py
src/summarization/: __init__.py  summarizer.py
src/transcription/: __init__.py  transcriber.py
src/tts/: __init__.py  vox_player.py
src/vr_renderer/: __init__.py  vrm_generator.py
tests/: __init__.py
viz/: audio_visualizer.py  index.html
