[project]
name = "vox-radio"
version = "0.1.0"
description = "FM radio receive → transcribe → summarize → VOICEVOX → VRM avatar visualization pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "websockets>=12",
    "ffmpeg-python>=0.2",
    "faster-whisper>=1.0",
    "torchaudio>=2.2",
    "soundfile>=0.12",
    "ollama>=0.1",
    "pydantic>=2.5",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "mypy>=1.5",
    "ruff>=0.1",
]
